--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-	"name": "Radio Amante",
-	"short_name": "Radio Amante",
+	"name": "Radio Aventura",
+	"short_name": "Radio Aventura",
 	"description": "Instala Nuestra Aplicacion y Escuchanos donde Quiera Que Estes.",
 	"icons" : [
 		{
